--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "connect-mongo": "^5.1.0",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.14.1",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
